Initial migration v7 add labels and new reports
